changes bade to index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>Git Exercise</title>
 </head>
 <body>
-	
+	<p>Pattern for Git</p>
+	<ul>
+		<li>git add-A</li>
+		<li>git commit -m "commit message"</li>
+		<li>git push origin master</li>
+	</ul>
 </body>
 </html>
